api: remove public outbox log endpoint
